# nostalgia

./: .env.example  .gitignore  .mcp.json  Dockerfile  IMPLEMENTATION_SUMMARY.md  Makefile  README.md  SECURITY_PERFORMANCE_REVIEW.md  docker-compose.yml  pyproject.toml
.beads/: nostalgia.db
.claude/: claude.md
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_kc_food_inspections_views.py  003_full_precision_coordinates.py  004_add_unit_and_display_slot.py
app/: main.py
app/api/: locations.py  memories.py
app/core/: config.py  exceptions.py  logging.py
app/db/: session.py
app/db/postgres/: __init__.py  postgres_location_repository.py  postgres_memory_repository.py  postgres_repository.py  postgres_tenancy_repository.py
app/db/supabase/: __init__.py  supabase_location_repository.py  (+4 more)
app/middleware/: correlation_id.py  logging.py  rate_limit.py
app/models/: __init__.py  kc_food_inspection.py  location.py  memory_submission.py  tenancy.py
app/repositories/: __init__.py  base.py  location_repository.py  memory_repository.py  tenancy_repository.py
app/schemas/: location.py  memory.py
app/services/: __init__.py  location_service.py  memory_service.py
scripts/: load_kc_food_inspections.py  sample_locations.csv  sample_tenancies.csv  seed_locations.py  seed_tenancies.py  transform_kc_to_tenancies.py
tests/: conftest.py
tests/integration/: test_location_endpoints.py  test_memory_endpoints.py
web/: .env.production  .prettierignore  CACHE_QA_CHECKLIST.md  DESIGN.md  README.md  package.json  pnpm-lock.yaml
web/src/: App.tsx  index.css
(+36 files in other folders)
